GUI-layout reconstruction with Java-FX